# UOC

./: .gitmodules
CNN_Primer_Off-Target_Rate_Prediction_project/: .gitignore  README.md  mlflow.db  one_run_DHs001z.py  one_run_bypanel.py  one_run_byprimer.py  pyproject.toml
CNN_Primer_Off-Target_Rate_Prediction_project/reports/2026-05-25_220409_one_run_baseline/: config.json  metrics.json  model.pt  primer_table.csv  report.md  report_files_description.txt  training_log.txt
CNN_Primer_Off-Target_Rate_Prediction_project/reports/2026-05-26_203811_one_run_baseline/: config.json  metrics.json  model.pt  primer_table.csv  report.md  training_log.txt
CNN_Primer_Off-Target_Rate_Prediction_project/reports/2026-05-30_161540_baseline_need_to_combine_SliptByPrimer_tv03_bs200_ep50_lr1e-4/: model.pt  training_log.txt
CNN_Primer_Off-Target_Rate_Prediction_project/reports/2026-05-30_172558_baseline_combineData_SplitByPrimer_tv03_bs550_ep50_lr1e-3/: training_log.txt
CNN_Primer_Off-Target_Rate_Prediction_project/reports/2026-05-30_211933_baseline_combineData_SplitByPanel_tv03_bs550_ep50_lr1e-3/: model.pt  (+1 more)
CNN_Primer_Off-Target_Rate_Prediction_project/scripts/: 01e_align_collap_encode_image_and_metadata.py  01e_verify_npz_imglab.py  03_encoding_to_image.py  evaluate_complex.py  main_test.py
CNN_Primer_Off-Target_Rate_Prediction_project/scripts_marta/: 01b_aling_encode_from_umi_filter_offTargets.py  01d_align_collap_encode_image.py  01f_align_collap_encode_and_metada.py  01f_verify_npz_imglab.py  eda_alignments.py  eval_onerun_test.py  mlflow.db  smoke_test.py  train_simple.py
(+139 files in other folders)
