[project]
name = "spe-primer-alignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython==1.86",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "fonttools==4.60.2",
    "importlib-resources==6.5.2",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "kiwisolver==1.4.7",
    "matplotlib>=3.10.8",
    "mlflow>=2.18",
    "nbconvert>=7.17.0",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "packaging==25.0",
    "pandas>=2.0",
    "pillow>=12.1.1",
    "pyparsing==3.3.1",
    "pysam>=0.23.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "regex>=2026.4.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "tzdata==2025.3",
    "zipp==3.23.0",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

